Downgrade ros-tooling/setup-ros from master to v0.5
Signed-off-by: naga <toritonsuibu0527@gmail.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ jobs:
           linter: [cppcheck, cpplint, uncrustify, xmllint, copyright]
     steps:
     - uses: actions/checkout@v2
-    - uses: ros-tooling/setup-ros@master
+    - uses: ros-tooling/setup-ros@v0.5
     - uses: ros-tooling/action-ros-lint@master
       with:
         linter: ${{ matrix.linter }}
